# clou

./: .gitignore  LICENSE  README.md  pyproject.toml
.clou/: .coordinator-milestone  brutalist-assessment.md  memory.md  plan-intent-specification-separation.md  plan-resolve-architectural-tensions.md  project.md  roadmap.md  roadmap.py.example  task-graph.md  understanding.md
.clou/prompts/: assess-evaluator-system.xml  assess-evaluator.md  assessor-system.xml  assessor.md  coordinator-assess.md  coordinator-execute.md  coordinator-exit.md  coordinator-plan.md  coordinator-system.xml  coordinator-verify.md  supervisor-system.xml  supervisor.md  verifier.md  worker.md
.clou/proposals/: 20260422-081514-canonicalize-cycle-type-vocabulary-tokens-execute-.md  20260422-081535-orient-context-budget-management-windowing-rollup-.md  20260422-092754-rework-closure-verification-in-the-orchestrator.md  20260422-120614-rework-phase-owner-affinity-routing.md  20260423-204639-crash-safe-orient-exit-restoration.md  20260423-223452-crash-safe-orient-exit-restoration.md  20260424-043336-unify-routing-vocabulary-into-single-source-of-tru.md  20260424-043352-gate-vocabulary-migration-with-sentinel-file-drop-.md  20260424-043405-prompt-mirror-resync-mechanism-replace-write-if-mi.md  20260425-044318-m51-vocabulary-canonicalization-structural-cleanup.md
.github/workflows/: release.yml
clou/: __init__.py  __main__.py  artifacts.py  assessment.py  auth.py  coordinator.py  coordinator_tools.py  escalation.py  gate.py  golden_context.py  graph.py  harness.py  hooks.py  judgment.py  orchestrator.py  phase_acceptance.py  precompose.py  project.py  prompts.py  proposal.py  recovery.py  recovery_checkpoint.py  recovery_compaction.py  recovery_consolidation.py  recovery_errors.py  recovery_escalation.py  recovery_git.py  recovery_selfheal.py  resume.py  session.py  shard.py  supervisor_tools.py  telemetry.py  tokens.py  tools.py  transcript.py  validation.py  vocabulary_migration.py
clou/_prompts/: assess-evaluator.md  assessor-system.xml  assessor.md  coordinator-assess.md  coordinator-execute.md  coordinator-exit.md  coordinator-orient.md  coordinator-plan.md  coordinator-replan.md  coordinator-verify.md  (+5 more)
knowledge-base/: README.md  architecture.md  design-principles.md  golden-context.md  interface.md  research-foundations.md  visual-language.md
pytest-of-noot/: pytest-current
tests/: conftest.py  test_agent_detail_screen.py  test_agent_observability_data_layer.py  test_app_dialogue.py  test_artifacts.py  test_assess_precomposition_wiring.py  test_assessment.py  test_auth.py  test_breath.py  test_bridge.py  test_cognitive_metrics.py  test_command_palette.py  test_commands.py  test_compact.py  test_context_pressure.py  test_context_tree.py  test_conversation.py  test_coordinator.py  test_coordinator_debt.py  test_coordinator_safeguards.py  test_coordinator_tools.py  test_dag.py  test_detail.py  test_diff.py  test_engine_gate_integration.py  test_enrichment.py  test_escalation.py  test_escalation_integration.py  test_escalation_schema.py  test_export.py  test_gate.py  test_gate_widget.py  test_golden_context.py  test_graph.py  test_halt_integration.py  test_halted_checkpoint.py  test_handoff.py  test_harness.py  test_harness_wiring.py  test_hooks.py  (+52 more)
(+5661 files in other folders)
