[project]
name = "clou"
version = "0.1.0"
description = "Agentic coding system for software construction"
requires-python = ">=3.12"
dependencies = ["claude-agent-sdk>=0.1.49", "textual>=1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
clou = "clou.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live Claude CLI auth (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clou.orchestrator"
disallow_untyped_decorators = false
