[project]
name = "clou-ai"
version = "0.1.2"
description = "Agentic coding system for software construction"
requires-python = ">=3.12"
dependencies = ["claude-agent-sdk>=0.1.49", "textual>=1.0"]
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "ejmockler"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ejmockler/clou"
Repository = "https://github.com/ejmockler/clou"
Issues = "https://github.com/ejmockler/clou/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
clou = "clou.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clou"]

[tool.hatch.build.targets.sdist]
exclude = [
    "pytest-of-noot",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring live Claude CLI auth (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clou.orchestrator"
disallow_untyped_decorators = false
